Solution to Homework 4